[package]
name = "kovi-plugin-event-engine"
version = "0.1.0"
edition = "2024"
description = "A OneBot V11 bot plugin framework"
license = "MPL-2.0"
authors = ["ThriceCola <thricecola@hotmail.com>"]
repository = "https://github.com/thricecola/Kovi"
readme = "README_Cargo.md"
documentation = "https://thricecola.github.io/kovi-doc/"
keywords = ["kovi", "onebot", "framework"]

[dependencies]
ahash = "0.8.12"
kovi = ">=0.12"
thiserror = "1"
