[package]
name = "kovi-plugin-event-engine"
version = "0.2.0"
edition = "2024"
description = "kovi's event engine"
license = "MPL-2.0"
authors = ["ThriceCola <thricecola@hotmail.com>"]
repository = "https://github.com/kovi-plugins/event-engine"
readme = "README_Cargo.md"
keywords = ["kovi", "onebot", "kovi-plugin"]

[dependencies]
ahash = "0.8.12"
kovi = ">=0.12"
thiserror = "1"
